Añadimos zona distancia minima.

--- a/program.html
+++ b/program.html
@@ -33,23 +33,23 @@
 
                 <div id="dimRecinto">
                     <p>Dimensiones del recinto</p>
-                    <p>- A: Largo [m] <input id="xv" onfocus="this.value=''" value="x [m]" autocomplete="off"/></p>
-                    <p>- B: Ancho [m] <input id="yv" onfocus="this.value=''" value="y [m]" autocomplete="off"/></p>
-                    <p>- C: Alto  [m] <input id="zv" onfocus="this.value=''" value="z [m]" autocomplete="off"/></p>
+                    <p>- A. Largo [m] : <input id="xv" onfocus="this.value=''" value="x [m]" autocomplete="off"/></p>
+                    <p>- B. Ancho [m] : <input id="yv" onfocus="this.value=''" value="y [m]" autocomplete="off"/></p>
+                    <p>- C. Alto  [m] : <input id="zv" onfocus="this.value=''" value="z [m]" autocomplete="off"/></p>
                 </div>
 
                 <div id="dimFuente">
                     <p>Posición de la fuente</p>
-                    <p>- Distancia con A [m]: <input id="xs" onfocus="this.value=''" value="x [m]" autocomplete="off"/></p>
-                    <p>- Distancia con B [m]: <input id="ys" onfocus="this.value=''" value="y [m]" autocomplete="off"/></p>
-                    <p>- Distancia con C [m]: <input id="zs" onfocus="this.value=''" value="z [m]" autocomplete="off"/></p>
+                    <p>- Distancia con A [m] : <input id="xs" onfocus="this.value=''" value="x [m]" autocomplete="off"/></p>
+                    <p>- Distancia con B [m] : <input id="ys" onfocus="this.value=''" value="y [m]" autocomplete="off"/></p>
+                    <p>- Distancia con C [m] : <input id="zs" onfocus="this.value=''" value="z [m]" autocomplete="off"/></p>
                 </div>
-                
+
                 <div id="dimMicro">
                     <p>Posición del micro</p>
-                    <p>- Distancia con A [m]: <input id="xm" onfocus="this.value=''" value="x [m]" autocomplete="off"/></p>
-                    <p>- Distancia con B [m]: <input id="ym" onfocus="this.value=''" value="y [m]" autocomplete="off"/></p>
-                    <p>- Distancia con C [m]: <input id="zm" onfocus="this.value=''" value="z [m]" autocomplete="off"/></p>
+                    <p>- Distancia con A [m] : <input id="xm" onfocus="this.value=''" value="x [m]" autocomplete="off"/></p>
+                    <p>- Distancia con B [m] : <input id="ym" onfocus="this.value=''" value="y [m]" autocomplete="off"/></p>
+                    <p>- Distancia con C [m] : <input id="zm" onfocus="this.value=''" value="z [m]" autocomplete="off"/></p>
                 </div>
 
                 <button onclick="main('t', 'xv', 'yv', 'zv', 'xs', 'ys', 'zs','xm', 'ym', 'zm')">Add</button>
