Añadimos distancia minima.

--- a/program.html
+++ b/program.html
@@ -9,7 +9,9 @@
     </head>
     <body onload="myCanvas()">
         <div id="front">
-          
+          <div id="title">
+            <img src="AcousticLabLogo.png">
+          </div>
             <div id="canvasDisplay">
 
                 <div id="dispOne">
