--- a/program.html
+++ b/program.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" name="program" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="program.css">
         <script type="text/javascript" src="program.js" ></script>
+        <script type="text/javascript" src="acousticModule.js"></script>
 <!--    <script type="text/javascript" src="canvas.js" ></script>-->
 
     </head>
@@ -31,31 +32,31 @@
 
                 <div id="tiempoRever">
                     <p>Tiempo de reverberación esperado:
-                    <input id="t" onfocus="this.value=''" value="t [s]" autocomplete="off"/></p>
+                    <input id="t" onfocus="this.value=''" type="number" autocomplete="off" novalidate></p>
                 </div>
 
                 <div id="dimRecinto">
                     <p>Dimensiones del recinto</p>
-                    <p>- A. Largo [m] : <input id="xv" onfocus="this.value=''" value="x [m]" autocomplete="off"/></p>
-                    <p>- B. Ancho [m] : <input id="yv" onfocus="this.value=''" value="y [m]" autocomplete="off"/></p>
-                    <p>- C. Alto  [m] : <input id="zv" onfocus="this.value=''" value="z [m]" autocomplete="off"/></p>
+                    <p>- A. Largo [m] : <input id="xv" onfocus="this.value=''" type="number" autocomplete="off"/></p>
+                    <p>- B. Ancho [m] : <input id="yv" onfocus="this.value=''" type="number" autocomplete="off"/></p>
+                    <p>- C. Alto  [m] : <input id="zv" onfocus="this.value=''" type="number" autocomplete="off"/></p>
                 </div>
 
                 <div id="dimFuente">
                     <p>Posición de la fuente</p>
-                    <p>- Distancia con A [m] : <input id="xs" onfocus="this.value=''" value="x [m]" autocomplete="off"/></p>
-                    <p>- Distancia con B [m] : <input id="ys" onfocus="this.value=''" value="y [m]" autocomplete="off"/></p>
-                    <p>- Distancia con C [m] : <input id="zs" onfocus="this.value=''" value="z [m]" autocomplete="off"/></p>
+                    <p>- Distancia con A [m] : <input id="xs" onfocus="this.value=''" type="number" autocomplete="off"/></p>
+                    <p>- Distancia con B [m] : <input id="ys" onfocus="this.value=''" type="number" autocomplete="off"/></p>
+                    <p>- Distancia con C [m] : <input id="zs" onfocus="this.value=''" type="number" autocomplete="off"/></p>
                 </div>
 
                 <div id="dimMicro">
                     <p>Posición del micro</p>
-                    <p>- Distancia con A [m] : <input id="xm" onfocus="this.value=''" value="x [m]" autocomplete="off"/></p>
-                    <p>- Distancia con B [m] : <input id="ym" onfocus="this.value=''" value="y [m]" autocomplete="off"/></p>
-                    <p>- Distancia con C [m] : <input id="zm" onfocus="this.value=''" value="z [m]" autocomplete="off"/></p>
+                    <p>- Distancia con A [m] : <input id="xm" onfocus="this.value=''" type="number" autocomplete="off"/></p>
+                    <p>- Distancia con B [m] : <input id="ym" onfocus="this.value=''" type="number" autocomplete="off"/></p>
+                    <p>- Distancia con C [m] : <input id="zm" onfocus="this.value=''" type="number" autocomplete="off"/></p>
                 </div>
 
-                <button onclick="main('t', 'xv', 'yv', 'zv', 'xs', 'ys', 'zs','xm', 'ym', 'zm')">Add</button>
+                <button onclick="main('t', 'xv', 'yv', 'zv', 'xs', 'ys', 'zs','xm', 'ym', 'zm')">CALCULAR</button>
             </div>
         </div>
     </body>
