--- a/program.html
+++ b/program.html
@@ -2,16 +2,17 @@
 <html lang="es" dir="ltr">
     <head>
         <meta charset="utf-8" name="program" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="program.css">
-        <script type="text/javascript" src="program.js" ></script>
-        <script type="text/javascript" src="acousticModule.js"></script>
-<!--    <script type="text/javascript" src="canvas.js" ></script>-->
+        <link rel="stylesheet" href="modules/style/program.css">
+        <script type="text/javascript" src="resources/program.js" ></script>
+        <script type="text/javascript" src="modules/services/acousticService.js"></script>
+        <script type="text/javascript" src="modules/services/canvasService.js"></script>
+        <script type="text/javascript" src="modules/values/valuesConst.js"></script>
 
     </head>
     <body onload="myCanvas()">
         <div id="front">
           <div id="title">
-            <img src="AcousticLabLogo.png">
+            <img src="modules/images/AcousticLabLogo.png">
           </div>
             <div id="canvasDisplay">
 
