Nuevo estilo y comprobación de distancias.

--- a/program.html
+++ b/program.html
@@ -29,32 +29,34 @@
                 </div>
             </div>
 
+            <div id="msgSpace"></div>
+
             <div id="formDisplay">
 
                 <div id="tiempoRever">
                     <p>Tiempo de reverberación esperado:
-                    <input id="t" onfocus="this.value=''" type="number" autocomplete="off" novalidate></p>
+                    <input required id="t" onfocus="this.value=''" type="number"></p>
                 </div>
 
                 <div id="dimRecinto">
                     <p>Dimensiones del recinto</p>
-                    <p>- A. Largo [m] : <input id="xv" onfocus="this.value=''" type="number" autocomplete="off"/></p>
-                    <p>- B. Ancho [m] : <input id="yv" onfocus="this.value=''" type="number" autocomplete="off"/></p>
-                    <p>- C. Alto  [m] : <input id="zv" onfocus="this.value=''" type="number" autocomplete="off"/></p>
+                    <p>- A. Largo [m] : <input id="xv" onfocus="this.value=''" type="number"></p>
+                    <p>- B. Ancho [m] : <input id="yv" onfocus="this.value=''" type="number"></p>
+                    <p>- C. Alto  [m] : <input id="zv" onfocus="this.value=''" type="number"></p>
                 </div>
 
                 <div id="dimFuente">
                     <p>Posición de la fuente</p>
-                    <p>- Distancia con A [m] : <input id="xs" onfocus="this.value=''" type="number" autocomplete="off"/></p>
-                    <p>- Distancia con B [m] : <input id="ys" onfocus="this.value=''" type="number" autocomplete="off"/></p>
-                    <p>- Distancia con C [m] : <input id="zs" onfocus="this.value=''" type="number" autocomplete="off"/></p>
+                    <p>- Distancia con A [m] : <input id="xs" onfocus="this.value=''" type="number"></p>
+                    <p>- Distancia con B [m] : <input id="ys" onfocus="this.value=''" type="number"></p>
+                    <p>- Distancia con C [m] : <input id="zs" onfocus="this.value=''" type="number"></p>
                 </div>
 
                 <div id="dimMicro">
                     <p>Posición del micro</p>
-                    <p>- Distancia con A [m] : <input id="xm" onfocus="this.value=''" type="number" autocomplete="off"/></p>
-                    <p>- Distancia con B [m] : <input id="ym" onfocus="this.value=''" type="number" autocomplete="off"/></p>
-                    <p>- Distancia con C [m] : <input id="zm" onfocus="this.value=''" type="number" autocomplete="off"/></p>
+                    <p>- Distancia con A [m] : <input id="xm" onfocus="this.value=''" type="number"></p>
+                    <p>- Distancia con B [m] : <input id="ym" onfocus="this.value=''" type="number"></p>
+                    <p>- Distancia con C [m] : <input id="zm" onfocus="this.value=''" type="number"></p>
                 </div>
 
                 <button onclick="main('t', 'xv', 'yv', 'zv', 'xs', 'ys', 'zs','xm', 'ym', 'zm')">CALCULAR</button>
