--- a/program.html
+++ b/program.html
@@ -4,10 +4,13 @@
     <meta charset="utf-8" name="program" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="modules/style/program.css">
     <script type="text/javascript" src="resources/program.js" ></script>
+    <script type="text/javascript" src="resources/optionGetReverberationTime.js" ></script>
     <script type="text/javascript" src="modules/services/acousticService.js"></script>
     <script type="text/javascript" src="modules/services/canvasService.js"></script>
     <script type="text/javascript" src="modules/services/displayService.js"></script>
+
     <script type="text/javascript" src="modules/values/valuesConst.js"></script>
+    <script type="text/javascript" src="  modules/objects/room.js"></script>
   </head>
 
   <body onload="myCanvas()">
@@ -26,13 +29,13 @@
         <div class="contenedorPrincipal">
           <div class="canvasDisplay">
             <div class="displayOne">
-              <h2>Vista Superior</h2>
+              <h2><i>Vista Superior</i></h2>
                 <canvas id="canvasSuperior" width="300" height="300" style="border:1px solid #000000;">
                 Please use a browser that supports "canvas"
             </div>
 
             <div class="displayTwo">
-              <h2>Vista Frontal</h2>
+              <h2><i>Vista Frontal</i></h2>
                 <canvas id="canvasFrontal"  width="300" height="300" style="border:1px solid #000000;">
                 Please use a browser that supports "canvas"
             </div>
@@ -43,28 +46,59 @@
           <div class="formDisplay">
             <div id="tiempoRever">
               <h4>Tiempo de reverberación esperado</h4>
-              <input required id="t" onfocus="this.value=''" placeholder="Tiempo de reverberación [s]">
+              <div class="in-box">
+                  <input required id="t" class="effect" placeholder="Tiempo reverberación [s]">
+                  <span class="focus-border"></span>
+              </div>
             </div>
 
             <div id="dimRecinto">
               <h4>Dimensiones del recinto</h4>
-              <p>- A. Largo [m] : <input id="xv" onfocus="this.value=''" type="number"></p>
-              <p>- B. Ancho [m] : <input id="yv" onfocus="this.value=''" type="number"></p>
-              <p>- C. Alto  [m] : <input id="zv" onfocus="this.value=''" type="number"></p>
+              <div class="in-box">
+                  <input required id="xv" class="effect" placeholder="Laro del recinto [m]">
+                  <span class="focus-border"></span>
+              </div>
+              <div class="in-box">
+                  <input required id="yv" class="effect" placeholder="Ancho del recinto [m]">
+                  <span class="focus-border"></span>
+              </div>
+              <div class="in-box">
+                  <input required id="zv" class="effect" placeholder="Altura del recinto [m]">
+                  <span class="focus-border"></span>
+              </div>
             </div>
 
             <div id="dimFuente">
               <h4>Posición de la fuente</h4>
-              <p>- Distancia con A [m] : <input id="xs" onfocus="this.value=''" type="number"></p>
-              <p>- Distancia con B [m] : <input id="ys" onfocus="this.value=''" type="number"></p>
-              <p>- Distancia con C [m] : <input id="zs" onfocus="this.value=''" type="number"></p>
+              <div class="in-box">
+                  <input required id="xs" class="effect" placeholder="Distancia con pared izq. [m]">
+                  <span class="focus-border"></span>
+              </div>
+              <div class="in-box">
+                  <input required id="ys" class="effect" placeholder="Distancia con pared inferior [m]">
+                  <span class="focus-border"></span>
+              </div>
+              <div class="in-box">
+                  <input required id="zs" class="effect" placeholder="Distancia con techo [m]">
+                  <span class="focus-border"></span>
+              </div>
+
             </div>
 
             <div id="dimMicro">
-              <h4>Posición del micro</h4>
-              <p>- Distancia con A [m] : <input id="xm" onfocus="this.value=''" type="number"></p>
-              <p>- Distancia con B [m] : <input id="ym" onfocus="this.value=''" type="number"></p>
-              <p>- Distancia con C [m] : <input id="zm" onfocus="this.value=''" type="number"></p>
+              <h4>Posición del micrófono</h4>
+              <div class="in-box">
+                  <input required id="xm" class="effect" placeholder="Distancia con pared izq. [m]">
+                  <span class="focus-border"></span>
+              </div>
+              <div class="in-box">
+                  <input required id="ym" class="effect" placeholder="Distancia con pared inferior [m]">
+                  <span class="focus-border"></span>
+              </div>
+              <div class="in-box">
+                  <input required id="zm" class="effect" placeholder="Distancia con techo [m]">
+                  <span class="focus-border"></span>
+              </div>
             </div>
 
             <button class="calcButton" onclick="main('t', 'xv', 'yv', 'zv', 'xs', 'ys', 'zs','xm', 'ym', 'zm')">CALCULAR</button>
@@ -84,16 +118,25 @@
             <h3>Tiempo de reverberación por Sabine</h3>
 
             <div id="dimRecinto">
-              <p>Dimensiones del recinto</p>
-              <p>- A. Largo [m] : <input id="xv" onfocus="this.value=''" type="number"></p>
-              <p>- B. Ancho [m] : <input id="yv" onfocus="this.value=''" type="number"></p>
-              <p>- C. Alto  [m] : <input id="zv" onfocus="this.value=''" type="number"></p>
+              <h4>Dimensiones del recinto</h4>
+              <div class="in-box">
+                  <input required id="x" class="effect" placeholder="Laro del recinto [m]">
+                  <span class="focus-border"></span>
+              </div>
+              <div class="in-box">
+                  <input required id="y" class="effect" placeholder="Ancho del recinto [m]">
+                  <span class="focus-border"></span>
+              </div>
+              <div class="in-box">
+                  <input required id="z" class="effect" placeholder="Altura del recinto [m]">
+                  <span class="focus-border"></span>
+              </div>
             </div>
 
-            <button class="calcButton" onclick="main('t', 'xv', 'yv', 'zv', 'xs', 'ys', 'zs','xm', 'ym', 'zm')">CALCULAR</button>
+            <button class="calcButton" onclick="optionGetReverberationTime('x', 'y', 'z')">CALCULAR</button>
 
             <div id="dimRecinto">
-              <p>Coeficientes de absorción</p>
+              <h3>Coeficientes de absorción</h3>
               <p>- Techo : <input id="xv" onfocus="this.value=''" type="number"></p>
               <p>- Pared 1 : <input id="xv" onfocus="this.value=''" type="number"></p>
               <p>- Pared 2 : <input id="xv" onfocus="this.value=''" type="number"></p>
