Nueva funcionalidad añadida: Cálculo tiempo de reverberación

--- a/program.html
+++ b/program.html
@@ -166,6 +166,8 @@
               'coef_suelo')">CALCULAR
             </button>
 
+            <div id="putReverTime"></div>
+
           </div>
         </div>
       </div>
