--- a/program.html
+++ b/program.html
@@ -15,9 +15,15 @@
 
   <body onload="myCanvas()">
 
-      <div id="title">
-        <img src="modules/images/AcousticLabLogo.png">
-      </div>
+    <div class="bg-image img1"></div>
+    <div class="bg-image img2"></div>
+    <div class="bg-image img3"></div>
+    <div class="bg-image img4"></div>
+    <div class="bg-image img5"></div>
+
+    <div class="bg-text bg-image">ACOUSTIC LAB</div>
+
+<!--    <div class="bg-text bg-image">ACOUSTIC LAB</div> -->
 
       <div class="tab">
         <button href="funciones.js" class="tablinks" onclick="displayService(event, 'minDistance')">Calcular distancias mínimas</button>
