Mejoras de posición y estylo

--- a/program.html
+++ b/program.html
@@ -8,7 +8,6 @@
     <script type="text/javascript" src="modules/services/acousticService.js"></script>
     <script type="text/javascript" src="modules/services/canvasService.js"></script>
     <script type="text/javascript" src="modules/services/displayService.js"></script>
-
     <script type="text/javascript" src="modules/values/valuesConst.js"></script>
     <script type="text/javascript" src="modules/objects/room.js"></script>
   </head>
@@ -20,10 +19,17 @@
     <div class="bg-image img3"></div>
     <div class="bg-image img4"></div>
     <div class="bg-image img5"></div>
+    <div class="bg-image img6"></div>
+    <div class="bg-image img7"></div>
 
-    <div class="bg-text bg-image">ACOUSTIC LAB</div>
+    <div class="bg-box bg-title bg-image">ACOUSTIC LAB</div>
 
-<!--    <div class="bg-text bg-image">ACOUSTIC LAB</div> -->
+    <div class="bg-box bg-description">
+      <p>¡Bienvenido a Acoustic-Lab!</p>
+      <p>Un espacio donde podrás realizar diferentes comprobaciones</p>
+      <p>gracias a las diferentes herramientas que ofrecemos.</p>
+      <p>¡Navega y haz ciencia ilimitadamente!</p>
+    </div>
 
       <div class="tab">
         <button href="funciones.js" class="tablinks" onclick="displayService(event, 'minDistance')">Calcular distancias mínimas</button>
