--- a/program.html
+++ b/program.html
@@ -19,8 +19,6 @@
     <div class="bg-image img3"></div>
     <div class="bg-image img4"></div>
     <div class="bg-image img5"></div>
-    <div class="bg-image img6"></div>
-    <div class="bg-image img7"></div>
 
     <div class="bg-box bg-title bg-image">ACOUSTIC LAB</div>
 
@@ -2736,9 +2734,17 @@
               <td class="tg-celda tx-center">0.64</td>
             </tr>
           </table>
-            <button class="downloadButton">Download</button>
           </div>
         </div>
+      </div>
+
+      <div id="grad1">
+        <p class="bg-paragraph"><img src="modules/style/images/twitter.png" style="float:left;width:64px;height:64px;"><strong>Twitter: </strong>@acousticLab</p>
+
+        <p class="bg-paragraph"><img src="modules/style/images/instagram.png" style="float:left;width:64px;height:64px;"><strong>Instagram: </strong>@acousticLab</p>
+
+        <p class="bg-paragraph"><img src="modules/style/images/github.png" style="float:left;width:64px;height:64px;">
+              <strong>Github: </strong><a style="color:black;" href="https://github.com/prodaromero/">@pablorodaromero</a></p>
       </div>
   <!--   </div> -->
   </body>
